--- a/languages/kb-woocommerce-braspress-pt_BR.po
+++ b/languages/kb-woocommerce-braspress-pt_BR.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Kayo Bruno - Braspress for WooCommerce\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-09-17 01:52+0000\n"
-"PO-Revision-Date: 2020-09-20 02:39+0000\n"
+"PO-Revision-Date: 2021-05-28 03:53+0000\n"
 "Last-Translator: \n"
 "Language-Team: Português do Brasil\n"
 "Language: pt_BR\n"
@@ -14,6 +14,59 @@ msgstr ""
 "X-Generator: Loco https://localise.biz/\n"
 "X-Loco-Version: 2.4.3; wp-5.5.1"
 
+msgid "Additional days"
+msgstr "Dias adicionais"
+
+msgid "Additional days to the estimated delivery."
+msgstr "Dias adicionais para a entrega estimada."
+
+msgid "Any Shipping Class"
+msgstr "Qualquer classe de envio"
+
+msgid "Behavior Options"
+msgstr "Opções de comportamento"
+
+#: includes/shipping/class-kb-woocommerce-braspress-air.php
+msgid "Braspress Air"
+msgstr "Braspress Aeropress"
+
+#: includes/shipping/class-kb-woocommerce-braspress-air-fob.php
+msgid "Braspress Air - FOB"
+msgstr "Braspress Aeropress - FOB"
+
+#: includes/shipping/class-kb-woocommerce-braspress-road.php
+msgid "Braspress Road"
+msgstr "Braspress Rodoviário"
+
+#: includes/shipping/class-kb-woocommerce-braspress-road-fob.php
+msgid "Braspress Road - FOB"
+msgstr "Braspress Rodoviário - FOB"
+
+msgid "Contact braspress to request your user and password"
+msgstr "Entre em contato com a braspress para solicitar seu usuário e senha"
+
+msgid "Deadline display message. Use %d to display the number of days"
+msgstr ""
+"Mensagem para exibição do prazo. Utilize %d para exibir o número de dias"
+
+msgid "Deadline Message"
+msgstr "Mensagem para exibição do prazo"
+
+msgid "Delivery in %d working day(s)"
+msgstr "Entregue em %d dia(s)"
+
+msgid "Each environment has a different username and password"
+msgstr "Cada ambiente tem um nome de usuário e senha diferentes"
+
+msgid "Enable this shipping method"
+msgstr "Habilitar este método de envio"
+
+msgid "Enable/Disable"
+msgstr "Habilitar/Desabilitar"
+
+msgid "Environment"
+msgstr "Ambiente"
+
 #. Author URI of the plugin
 msgid "https://github.com/kayobruno"
 msgstr "https://github.com/kayobruno"
@@ -21,6 +74,20 @@ msgstr "https://github.com/kayobruno"
 #. URI of the plugin
 msgid "https://github.com/kayobruno/kb-woocommerce-braspress"
 msgstr "https://github.com/kayobruno/kb-woocommerce-braspress"
+
+#: includes/class-kb-woocommerce-braspress.php
+msgid "Identifier"
+msgstr "CPF / CNPJ"
+
+msgid "If necessary, select a shipping class to apply this method."
+msgstr ""
+"Se necessário, selecione uma classe de envio para aplicar neste método."
+
+msgid ""
+"It's a shipping method that allow to the customer to ship your product using "
+"%s."
+msgstr ""
+"É um método de envio que permite ao cliente enviar seu produto usando %s."
 
 #. Name of the plugin
 msgid "Kayo Bruno - Braspress for WooCommerce"
@@ -30,88 +97,6 @@ msgstr "Kayo Bruno - Braspress para WooCommerce"
 msgid "Kayo Bruno <kayodw@gmail.com>"
 msgstr "Kayo Bruno <kayodw@gmail.com>"
 
-#. Description of the plugin
-msgid "This is an unofficial Braspress plugin for shipping calculation"
-msgstr "Este é um plugin Braspress não oficial para cálculo de frete"
-
-#. translators: %s: method title
-#: includes/abstracts/abstract-kb-woocommerce-braspress-shipping-method.php
-msgid "Staging"
-msgstr "Homologação"
-
-msgid "Production"
-msgstr "Produção"
-
-msgid ""
-"It's a shipping method that allow to the customer to ship your product using "
-"%s."
-msgstr ""
-"É um método de envio que permite ao cliente enviar seu produto usando %s."
-
-msgid "Enable/Disable"
-msgstr "Habilitar/Desabilitar"
-
-msgid "Enable this shipping method"
-msgstr "Habilitar este método de envio"
-
-msgid "Title"
-msgstr "Título"
-
-msgid "This controls the title which the user sees during checkout."
-msgstr "Isso controla o título que o usuário vê durante o checkout."
-
-msgid "Environment"
-msgstr "Ambiente"
-
-msgid "Each environment has a different username and password"
-msgstr "Cada ambiente tem um nome de usuário e senha diferentes"
-
-msgid "User"
-msgstr "Usuário"
-
-msgid "Password"
-msgstr "Senha"
-
-msgid "Contact braspress to request your user and password"
-msgstr "Entre em contato com a braspress para solicitar seu usuário e senha"
-
-msgid "Behavior Options"
-msgstr "Opções de comportamento"
-
-msgid "Show/Hide"
-msgstr "Mostrar/Ocultar"
-
-msgid "Show estimated delivery"
-msgstr "Exibir prazo de entrega"
-
-msgid "Additional days"
-msgstr "Dias adicionais"
-
-msgid "Additional days to the estimated delivery."
-msgstr "Dias adicionais para a entrega estimada."
-
-msgid "Shipping Class"
-msgstr "Classe de envio"
-
-msgid "If necessary, select a shipping class to apply this method."
-msgstr ""
-"Se necessário, selecione uma classe de envio para aplicar neste método."
-
-msgid "Origin Postcode"
-msgstr "Código postal de Origem"
-
-msgid "The postcode of the location your packages are delivered from."
-msgstr "O código postal do local de onde seus pacotes são entregues."
-
-msgid "Origin Identifier"
-msgstr "CPF / CNPJ de Origem"
-
-msgid "The identifier of your company"
-msgstr "CNPJ da sua empresa"
-
-msgid "Optional Services"
-msgstr "Serviços Opicionais"
-
 msgid "Message FOB (Free on Board)"
 msgstr "Mensagem FOB (Free on Board)"
 
@@ -120,41 +105,66 @@ msgid ""
 msgstr ""
 "Mensagem que será exibida quando o modo FOB (Free on Board) for selecionado."
 
-msgid "Remove on conveyor"
-msgstr "Coletar na transportadora"
-
-msgid "Any Shipping Class"
-msgstr "Qualquer classe de envio"
-
 msgid "No Shipping Class"
 msgstr "Sem classe de envio"
 
-msgid "Unable to calculate shipping"
-msgstr "Não foi possível calcular o frete"
+msgid "Optional Services"
+msgstr "Serviços Opicionais"
 
-msgid "Delivery in %d working day(s)"
-msgstr "Entregue em %d dia(s)"
+msgid "Origin Identifier"
+msgstr "CPF / CNPJ de Origem"
 
-#: includes/shipping/class-kb-woocommerce-braspress-air-fob.php
-msgid "Braspress Air - FOB"
-msgstr "Braspress Aeropress - FOB"
+msgid "Origin Postcode"
+msgstr "Código postal de Origem"
 
-#: includes/shipping/class-kb-woocommerce-braspress-air.php
-msgid "Braspress Air"
-msgstr "Braspress Aeropress"
+msgid "Password"
+msgstr "Senha"
 
-#: includes/shipping/class-kb-woocommerce-braspress-road-fob.php
-msgid "Braspress Road - FOB"
-msgstr "Braspress Rodoviário - FOB"
+msgid "Production"
+msgstr "Produção"
 
-#: includes/shipping/class-kb-woocommerce-braspress-road.php
-msgid "Braspress Road"
-msgstr "Braspress Rodoviário"
+msgid "Remove on conveyor"
+msgstr "Coletar na transportadora"
 
-#: includes/class-kb-woocommerce-braspress.php
-msgid "Identifier"
-msgstr "CPF / CNPJ"
+msgid "Shipping Class"
+msgstr "Classe de envio"
+
+msgid "Show estimated delivery"
+msgstr "Exibir prazo de entrega"
+
+msgid "Show/Hide"
+msgstr "Mostrar/Ocultar"
+
+#. translators: %s: method title
+#: includes/abstracts/abstract-kb-woocommerce-braspress-shipping-method.php
+msgid "Staging"
+msgstr "Homologação"
+
+msgid "The identifier of your company"
+msgstr "CNPJ da sua empresa"
+
+msgid "The postcode of the location your packages are delivered from."
+msgstr "O código postal do local de onde seus pacotes são entregues."
 
 #: includes/class-kb-woocommerce-braspress-api.php
 msgid "The shipping could not be calculated because information is missing"
 msgstr "Não foi possível calcular o frete porque faltam informações"
+
+msgid "This controls the title which the user sees during checkout."
+msgstr "Isso controla o título que o usuário vê durante o checkout."
+
+#. Description of the plugin
+msgid "This is an unofficial Braspress plugin for shipping calculation"
+msgstr "Este é um plugin Braspress não oficial para cálculo de frete"
+
+msgid "Title"
+msgstr "Título"
+
+msgid "Unable to calculate shipping"
+msgstr "Não foi possível calcular o frete"
+
+msgid "Up to %d working days"
+msgstr "Até %d dias úteis"
+
+msgid "User"
+msgstr "Usuário"
